add log toggle
